--- a/01_collaborative-environment/03_rmarkdown.Rmd
+++ b/01_collaborative-environment/03_rmarkdown.Rmd
@@ -87,7 +87,7 @@ length(pkgs)
 ```
 
 
-Have a look at RStudio's [RMarkdown cheat sheet](https://www.rstudio.com/wp-content/uploads/2016/03/rmarkdown-cheatsheet-2.0.pdf)
+Have a look at RStudio's [RMarkdown cheat sheet](https://www.rstudio.com/resources/cheatsheets/)
 
 ## What is RMarkdown?
 
