--- a/03_tidyverse/02_dplyr-examples.Rmd
+++ b/03_tidyverse/02_dplyr-examples.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "dplyr examples"
-author: https://github.com/mangothecat/rmdshower
+author: Heike Hofmann
 ratio: 16x10
 output:
   rmdshower::shower_presentation:
