--- a/06_web-scraping/01_rvest.Rmd
+++ b/06_web-scraping/01_rvest.Rmd
@@ -86,7 +86,7 @@ Sometimes data on the web is not structured as nicely ... e.g. let's assume we w
 ## SelectorGadget
 
 - SelectorGadget is a javascript bookmarklet to determine the css selectors of pieces of a website we want to extract.
-- Bookmark the [SelectorGadget](javascript:(function(){var%20s=document.createElement('div');s.innerHTML='Loading...';s.style.color='black';s.style.padding='20px';s.style.position='fixed';s.style.zIndex='9999';s.style.fontSize='3.0em';s.style.border='2px%20solid%20black';s.style.right='40px';s.style.top='40px';s.setAttribute('class','selector_gadget_loading');s.style.background='white';document.body.appendChild(s);s=document.createElement('script');s.setAttribute('type','text/javascript');s.setAttribute('src','http://www.selectorgadget.com/stable/lib/selectorgadget.js?raw=true');document.body.appendChild(s);})();) link, then click on it to use it.
+- Read up on the [SelectorGadget](http://selectorgadget.com/) link: install it for your machine by either bookmarking the link or installing the Chrome extension, then click on it to use it.
 - When SelectorGadget is active, pieces of the website are highlighted in orange/green/red.
 - Use SelectorGadget on http://www.baseball-reference.com/players/ .
 - read more details on `vignette("selectorgadget")`
@@ -116,7 +116,7 @@ html %>% html_nodes("#div_players_ a") %>% html_attr(name="href") %>% head()
 
 ## Your Turn
 
-Use the [SelectorGadget](javascript:(function(){var%20s=document.createElement('div');s.innerHTML='Loading...';s.style.color='black';s.style.padding='20px';s.style.position='fixed';s.style.zIndex='9999';s.style.fontSize='3.0em';s.style.border='2px%20solid%20black';s.style.right='40px';s.style.top='40px';s.setAttribute('class','selector_gadget_loading');s.style.background='white';document.body.appendChild(s);s=document.createElement('script');s.setAttribute('type','text/javascript');s.setAttribute('src','http://www.selectorgadget.com/stable/lib/selectorgadget.js?raw=true');document.body.appendChild(s);})();) on the website for [David Aardsma](http://www.baseball-reference.com/players/a/aardsda01.shtml)
+Use the SelectorGadget on the website for [David Aardsma](http://www.baseball-reference.com/players/a/aardsda01.shtml)
 
 Find the css description to extract his career statistics and load them into your R session.
 
@@ -131,11 +131,14 @@ url <- "http://www.baseball-reference.com/players/a/aardsda01.shtml"
 html <- read_html(url)
 # good first start, but not good for further processing
 html %>% html_nodes(".stats_pullout p , h4")
+```
 
+## Your Turn  - Solution (2)
+
+```{r}
 # better: pull out individual vectors
 html %>% html_nodes("h4") %>% html_text()
-html %>% html_nodes(".stats_pullout p") %>% html_text()
-
+html %>% html_nodes(".stats_pullout p") %>% html_text() 
 ```
 
 
